Início da separação das configurações por ambiente.

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -5,5 +5,8 @@
       "System": "Information",
       "Microsoft": "Information"
     }
+  },
+  "ConnectionStrings": {
+    "WebApiUploadDownloadContext": "Server=(localdb)\\mssqllocaldb;Database=WebApiUploadDownloadContextDB;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
