--- a/appsettings.json
+++ b/appsettings.json
@@ -4,8 +4,5 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "WebApiUploadDownloadContext": "Server=(localdb)\\mssqllocaldb;Database=WebApiUploadDownloadContextDB;Trusted_Connection=True;MultipleActiveResultSets=true"
-  }
+  "AllowedHosts": "*"
 }
