--- a/appsettings.json
+++ b/appsettings.json
@@ -7,5 +7,8 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "WebApiUploadDownloadFS": ""
+  },
+  "UploadConfig": {
+    "BaseDir":  "uploaded"
   }
 }
